--- a/01java/team-framework/team-framework-tcl/pom.xml
+++ b/01java/team-framework/team-framework-tcl/pom.xml
@@ -1,35 +1,28 @@
-<?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <name>Team framework's technical components library</name>
   <parent>
     <groupId>org.team.framework</groupId>
     <artifactId>team-framework</artifactId>
     <version>1.0.0</version>
   </parent>
   <artifactId>team-framework-tcl</artifactId>
-	<!-- mandatory dependencies -->
-	<dependencies>
-		<!-- below is the dependencies which can be set by configration in scope 
-			attitude -->
+  <name>team-framework-tcl</name>
+  
+  <dependencies>
 		<!-- apache common -->
 		<dependency>
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils-core</artifactId>
-			<version>1.8.3</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.3.2</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
-			<version>1.5</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 
@@ -37,77 +30,65 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>${spring.version}</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
-			<version>${spring.version}</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
-			<version>${spring.version}</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>${spring.version}</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>${spring.version}</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>${spring.version}</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
-
-		<!-- spring security -->
+		
+		<!-- spring-security-web -->
 		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-web</artifactId>
-			<version>${spring-security.version}</version>
-			<scope>${dependency.scope}</scope>
+        	<groupId>org.springframework.security</groupId>
+        	<artifactId>spring-security-web</artifactId>
+        	<scope>${dependency.scope}</scope>
+    	</dependency>
+    	<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-config</artifactId>
+		    <scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-config</artifactId>
-			<version>${spring-security.version}</version>
-			<scope>${dependency.scope}</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-taglibs</artifactId>
-			<version>${spring-security.version}</version>
-			<scope>${dependency.scope}</scope>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-taglibs</artifactId>
+		    <scope>${dependency.scope}</scope>
 		</dependency>
 
 		<!-- aspectj -->
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
-			<version>${aspectj.version}</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
-			<version>${aspectj.version}</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
 			<groupId>cglib</groupId>
 			<artifactId>cglib</artifactId>
-			<version>3.2.0</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 
@@ -115,15 +96,18 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>${hibernate.version}</version>
+			<scope>${dependency.scope}</scope>
+		</dependency>
+		 <dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 
 		<!-- c3p0 -->
 		<dependency>
-			<groupId>c3p0</groupId>
+			<groupId>com.mchange</groupId>
 			<artifactId>c3p0</artifactId>
-			<version>0.9.1.2</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 
@@ -131,35 +115,55 @@
 		<dependency>
 			<groupId>commons-pool</groupId>
 			<artifactId>commons-pool</artifactId>
-			<version>1.6</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
-			<version>1.4</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-collections</groupId>
 			<artifactId>commons-collections</artifactId>
-			<version>3.2.2</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 
 		<!-- json -->
 		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>fastjson</artifactId>
-			<version>1.2.8</version>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-core-asl</artifactId>
+			<scope>${dependency.scope}</scope>
 		</dependency>
-
-
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<scope>${dependency.scope}</scope>
+		</dependency>
+		<dependency>    
+        	<groupId>com.fasterxml.jackson.core</groupId>    
+        	<artifactId>jackson-databind</artifactId>    
+    	</dependency>
+    	<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+		</dependency>
+		
+		<!-- tiles -->
+		<dependency>
+            <groupId>org.apache.tiles</groupId>
+            <artifactId>tiles-servlet</artifactId>
+            <scope>${dependency.scope}</scope>
+        </dependency>
+		<dependency>
+            <groupId>org.apache.tiles</groupId>
+            <artifactId>tiles-jsp</artifactId>
+            <scope>${dependency.scope}</scope>
+        </dependency>
+        
 		<!-- log4j -->
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 
@@ -167,21 +171,18 @@
 	    <dependency>
 	      <groupId>org.slf4j</groupId>  
 	      <artifactId>slf4j-log4j12</artifactId>  
-	      <version>1.7.16</version>  
-				<scope>${dependency.scope}</scope>
+		  <scope>${dependency.scope}</scope>
 	    </dependency>
 
 		<!-- excel parsing -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
-			<version>3.13</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
-			<version>3.13</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 
@@ -189,13 +190,11 @@
 		<dependency>
 			<groupId>com.google.zxing</groupId>
 			<artifactId>core</artifactId>
-			<version>3.2.1</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.google.zxing</groupId>
 			<artifactId>javase</artifactId>
-			<version>3.2.1</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 
@@ -203,13 +202,16 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
-			<version>1.2</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
+	        <groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+	        <scope>provided</scope>
+	    </dependency>
+		<dependency>
 			<groupId>taglibs</groupId>
 			<artifactId>standard</artifactId>
-			<version>1.1.2</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 
@@ -217,7 +219,6 @@
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
-			<version>1.3.1</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 
@@ -225,69 +226,51 @@
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-frontend-jaxws</artifactId>
-			<version>${cxf.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-transports-http</artifactId>
-			<version>${cxf.version}</version>
 		</dependency>
 
 		<!-- Quartz -->
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
-			<version>${jobscheduler.quartz.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>c3p0</groupId>
+					<artifactId>c3p0</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz-jobs</artifactId>
-			<version>${jobscheduler.quartz.version}</version>
 		</dependency>
 		
 		<!-- mail -->
 		<dependency>
 		  <groupId>javax.mail</groupId>
 		  <artifactId>mail</artifactId>
-		  <version>1.4.7</version>
 		</dependency>
 		
 		<!-- database connector -->
-		<!-- hsqldb -->
-		<dependency>
-			<groupId>hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-			<version>${hsqldb.connector.version}</version>
-			<scope>${dependency.scope}</scope>
-		</dependency>
 		<!-- mysql connector -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>${mysql.connector.version}</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
-		<!-- microsoft sqlserver connector -->
-		<dependency>
-			<groupId>com.hynnet</groupId>
-			<artifactId>sqljdbc-chs</artifactId>
-			<version>${sqlserver.connector.version}</version>
-			<scope>${dependency.scope}</scope>
-		</dependency>
-		<!-- oracle connector -->
-		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc14</artifactId>
-			<version>${oracle.connector.version}</version>
-			<scope>${dependency.scope}</scope>
-		</dependency>
-
+		
 		<!-- junit -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>${test.junit.version}</version>
-			<scope>${dependency.scope}</scope>
 		</dependency>
 	</dependencies>
+	
+	<build>
+		<finalName>${project.artifactId}-${project.version}</finalName>
+	</build>
+	<description>Technology component layer.</description>
 </project>
